--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,47 @@
+html, body{
+    background-image: url("webb.png");
+    height: 100%;
+}
+
 .inline-btn{
     display: inline;
 }
 
+#articles{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 div.card{
-    float: left;
     margin: 1%;
+}
+
+div.row{
+    margin-left: 5%;
+    margin-top: 5%;
+}
+
+div#article{
+    width: 100%;
+}
+
+.image-box{
+    width: 100%; 
+    height: 100%;
+}
+
+.video-box{
+    width: 100%; 
+    height: 255px;
+}
+
+.comments{
+    width: 40%; 
+    float: left;
+}
+
+.comments-card{
+    width: 100%; 
 }
 
 #wrapper {
@@ -19,7 +56,13 @@ div.card{
     box-shadow: 3px 3px 5px rgb(51, 51, 51);
 }
 
-textarea {
-    height: 200px;
-    font-size: 18px;
+@media only screen and (max-width: 767px) {
+    div.row{
+        margin-left: 0%;
+        margin-right: 2%;
+        margin-top: 1%;
+    }
+    #wrapper{
+        width: 85%;
+    }
 }
