Polishing, fix readme, add dark mode

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div id="wrapper">
-    <h1 style="margin-left: 10px;">Educational News Scraper</h1>
-    <h3 style="margin-left: 10px;"><i>All the news that's fit to learn.</i></h3>
+    <h1 class="main-text" style="margin-left: 10px;">ScrapeScience News</h1>
+    <h3 class="main-text" style="margin-left: 10px;"><i>Nerd out on the newest knowledge</i></h3>
     <button class="btn btn-info" id="scrape-open" onclick="location.href=window.location.href + 'scrape/openculture';">Scrape OpenCulture</button>
     <button class="btn btn-primary" id="scrape-science" onclick="location.href=window.location.href + 'scrape/sciencenews';">Scrape ScienceNews</button>
     <div id="articles">
