--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,93 +2,37 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Mongoose Scraper</title>
-    <link rel="stylesheet" href="/style.css">
+    <title>ScrapeScience</title>
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">EduNews</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="/">ScrapeScience</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://github.com/wsatchmo/News_Scrape" target="_blank">Github Repo</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link toggle-dark" href="#">Dark Mode</a>
+                </li>
             </ul>
         </div>
-        </nav>
+    </nav>
     
       {{{body}}}
+      
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
 
-<script id="ADD_COMMENT" type="text/javascript"> //Script for sending PUT request
-$("#push-comment").on("click", function(event) {
-    event.preventDefault();
-    console.log("Comment submit button pressed");
-    let _id = $("#push-comment").attr("data-id");
-    let comment = $("#comment-input").val().trim();
-
-    //If comment field blank
-    if (comment === ""){
-        console.log("Error: Must enter something in comment field");
-    } else {
-        //otherwise add to db
-        data = { //This sends the data from the fields to the server
-        _id: _id,
-        comment: comment
-        }
-        console.log(data);
-
-        // Send the POST request.
-        $.ajax("/articles/comment", {
-            type: "POST",
-            data: data
-        }).then(
-        function(req) {     
-        });
-        setTimeout(function() { //In 3 sec, go to post
-        //console.log("Countdown fired");
-        window.location.reload();
-        }, 1000);
-    };
-});
-</script>
-
-<script id="DELETE_COMMENT" type="text/javascript"> //Script for sending PUT request
-$(".delete-comment").on("click", function(event) {
-    event.preventDefault();
-    console.log("Comment delete button pressed");
-    let index = $(this).attr("data-id");
-    let comment = $(this).attr("data-comment");
-    let _id = $("#push-comment").attr("data-id");
-
-    //otherwise add to db
-    data = { //This sends the data from the fields to the server
-    _id: _id,
-    comment: comment
-    }
-    //console.log(data);
-
-    // Send the POST request.
-    $.ajax("/articles/comment/delete", {
-        type: "POST",
-        data: data
-    }).then(
-    function(req) {     
-    });
-    setTimeout(function() { //In 3 sec, go to post
-    //console.log("Countdown fired");
-    window.location.reload();
-    }, 1000);
-});
-</script>
+<script type="text/javascript" src="js/app.js"></script>
